--- a/Parser/Parser/bin/x64/Debug/Parser.exe.config
+++ b/Parser/Parser/bin/x64/Debug/Parser.exe.config
@@ -1,11 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <connectionStrings>
-    <!-- БД для хранения неотправленных сообщений -->
-    <add name="Consorto" connectionString="Server=localhost\ADW2012;Database=Consorto;User Id=sa;Password=4491756;" providerName="System.Data.SqlClient" />
+    <add name="Consorto" connectionString="Server=localhost\ADW2012;Database=Consorto;User Id=sa;Password=123456;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <gcAllowVeryLargeObjects enabled="true" />
